# localstack-api-demo

./: .gitignore  cdk.json  package-lock.json  package.json  pyproject.toml
lib/: localstack-api-gateway-stack.ts
src/helloWorldLambda/: index.ts
test/: localstack-api-gateway.test.ts
