[tool.poetry]
name = "localstack-api-gateway"
version = "0.1.0"
description = ""
authors = ["Gareth <gareth.w.owen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
awscli-local = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
